--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               "bg-body": "#ffffff",
               "color-primary1": "rgba(171, 239, 95, 0.5)",
               "body-primary": "rgba(244, 244, 244, 1)",
+              "footer-primary": "rgb(115, 115, 115))",
               backgroundImage: {
                 bannerBg:"url('./assets/bg.jpg')",
               }
@@ -81,8 +82,6 @@
               </svg>
             </div>
             <h1 class="font-bold text-2xl text"><a href="#">Rinterio</a></h1>
-
-            <!-- <a class="btn btn-ghost text-xl">daisyUI</a> -->
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 gap-2 text-lg font-semibold">
@@ -196,7 +195,7 @@
     <section class="lg:px-32 px-1 py-20 bannerBg mt-5"> 
       <h1 class="lg:text-5xl text-3xl text-center mb-4 font-bold">Let’s Discuss Next Project</h1>
       <p class="w-10/12 mx-auto text-center mb-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-      <div class="w-11/12 mx-auto bg-bannerBg">
+      <div class="w-8/12 mx-auto bg-bannerBg">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
           <input type="text" placeholder="First Name*" class="input input-bordered rounded-full w-full" />
           <input type="text" placeholder="Last Name*" class="input input-bordered rounded-full w-full" />
@@ -211,6 +210,48 @@
       </div>
       </section>
     <!-- footer section -->
-    <footer></footer>
+    <footer class="">
+      <div class="">
+        <footer class="footer footer-center text-base-content rounded p-10">
+          <div class="footer-center">
+            
+            <div
+              class="bg-color-primary px-2 py-2 mr-2 rounded-full text-black"
+            
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                />
+              </svg>
+            </div>
+            <h1 class="font-bold text-2xl text"><a href="#">Rinterio</a></h1>
+            <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          </div>
+          <!-- Footer Link -->
+
+          <nav class="grid grid-flow-col gap-10">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">Service</a>
+            <a class="link link-hover">Portfolio</a>
+            <a class="link link-hover">Blogs</a>
+            <a class="link link-hover">Contact us</a>
+          </nav>
+          <nav>
+          </nav>
+          <aside>
+            <p>Copyright © All right reserved by freelancerjolil</p>
+          </aside>
+        </footer>
+      </div>
+    </footer>
   </body>
 </html>
